# jellytui

./: Cargo.toml
crates/jellyfin-client/src/: lib.rs
src/: app.rs  client.rs  download.rs  images.rs  main.rs  player.rs  ui.rs
