[package]
name = "jellytui"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/jellyfin-client"]

[dependencies]
jellyfin-client = { path = "crates/jellyfin-client" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
directories = "5"
toml = "0.8"
mpv-ipc = "0.1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
dirs = "5"
ratatui-image = { version = "8", features = ["crossterm"] }
image = "0.25"
